fix: fix z-index on navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ body {
     top:-35rem;
     right:0rem;
     transition: top 1.5s;
-    z-index: -1;
+    z-index: 9;
 }
 
 .navbar-list {
